- Compote buffed; requires more ingredients
- Salad dressing can be made just with vinegar + oil - DONE!!!
- Peanut sauce can be used in salad and pasta meals - DONE!!!
- Peanut sauce can be made with fish sauce - DONE!!!
- Small bones can be used like bones to make broth/gelatin - DONE!!!
- Lard harden timer reduced from 2880 hours to 240 hours - DONE!!!

BUG FIXES:
- Primitive survival meat patches corrected for meals (cold pasta specifically)
- Oven transforms reviewed for all items
- SAUSAGE ONLY HAS HALF THE EXTRA NUTRIENTS WHEN BOILED??? WHY
- WHY ARE FRIED BALLS DOING IT TOO????
- Peanut butter fixed so it gives nutrients when in bowl/bucket
- NutritionProps removed from salad dressing - DONE!!!
- Olives can be pressed into oil again - DONE!!!
- Candied apple in fruit bar visual fixed - DONE!!!

NEW FOOD:
- added meatloaf?
- added walnut/sunflower butter?
- Dehydrated yeast added (cook in cooking pot; grind result)
- Salad dressing split into more variants (basic, savory, smooth, sweet, deluxe) - DONE!!!

MISC: 
- Dialogue added to Kitchenware Trader; readjusted code to push text to en.json
- Food can be put on the ground, I guess?
- Peanut skin model changed
- Soybean textures/shapes updated
- Primitive survival patches reviewed
- FIX THE FUCKING TRADER SPAWNS!!! STOP SPAWNING IN WATER STOP IT STOP IT STOP ITTTTTTTTTTTTTTTTTT
- WHYYYYY IS SALAD DRESSING NOT WORKING IN MEALS??????????????????????
- use the new 'NutritionPropertiesPerLitreInMeal' stuff
- Healing over time implemented for all items
- Soulstorm Brew makes you psychedelic now?
- Items can go into crocks? New labels for everything?
- Fermented fish slop pile voxelized to resemble pickled soybean pile - DONE!!!
- Pickled cabbage transform reviewed
- French translation added (thanks to Laerinok!) - DONE!!!


2.0.0-dev.5
REBALANCING:
- Chickens can eat eggshells again; eggshell and peanut skin requirements quadrupled for troughs

BUG FIXES:
- Fermented fish slop barrel textures fixed