@@ -1135,7 +1135,7 @@
   "item-foodoilportion-soy": "Soybean oil portion",
   "itemdesc-foodoilportion-*": "Great for cooking or lubricating mechanics!",
   "item-handbooktitle-foodoilportion": "Food Oil",
-  "item-handbooktext-foodoilportion": "An .",
+  "item-handbooktext-foodoilportion": "Cooking oils are a versatile kind of liquid fat, used primarily in cooking. However, its lubricating qualities allow oil a secondary use for reducing friction in machinery.<br><br>Certain materials are easier to juice than others.<br>Grain and seeds require the most material (128 per 10 L).<br>Legumes such as soybeans and peanuts require less (64 per 10 L).<br>Olives require the fewest materials, as they are quite juicy (32 per 10 L).",
 
   "incontainer-item-foodoilportion-rice" : "Rice bran oil",
   "incontainer-item-foodoilportion-flax" : "Flax oil",
