@@ -5,7 +5,7 @@
     "value": {
       "*-soybean": {
         "juiceableProperties": {
-            "litresPerItem": 0.078125,
+            "litresPerItem": 0.15625,
             "liquidStack": {
                 "type": "item",
                 "code": "expandedfoods:foodoilportion-soy",
@@ -20,7 +20,7 @@
       },
       "*-peanut": {
         "juiceableProperties": {
-            "litresPerItem": 0.078125,
+            "litresPerItem": 0.15625,
             "liquidStack": {
                 "type": "item",
                 "code": "expandedfoods:foodoilportion-peanut",
