@@ -112,6 +112,7 @@ REBALANCING:
 - Peanut sauce can be made with fish sauce - DONE!!!
 - Small bones can be used like bones to make broth/gelatin - DONE!!!
 - Lard harden timer reduced from 2880 hours to 240 hours - DONE!!!
+- Legumes juice into more oil - DONE!!!
 
 BUG FIXES:
 - Primitive survival meat patches corrected for meals (cold pasta specifically)
